# MMIP_hw2

./: CMakeLists.txt  README.md
assets/: I0  I26
include/block/: tiling.hpp  zigzag.hpp
include/cli/: cli_parser.hpp
include/codec/: decoder.hpp  encoder.hpp
include/entropy/: bitstream.hpp  huffman.hpp  rle.hpp
include/format/: mcodec_format.hpp
include/io/: image_types.hpp  medical_loader.hpp  medical_saver.hpp
include/preprocess/: level_shift.hpp
include/quant/: quantizer.hpp
include/transform/: dct2d.hpp
result/: I26.mcodec  I26_compressed.pgm
result/I0/: I0_metric.csv
result/I26/: I26_metric.csv
src/: decode_main.cpp  encode_main.cpp  evaluate.cpp
src/block/: tiling.cpp  zigzag.cpp
src/cli/: cli_parser.cpp
src/codec/: decoder.cpp  encoder.cpp
src/entropy/: bitstream.cpp  huffman.cpp  rle.cpp
src/format/: mcodec_format.cpp
src/io/: medical_loader.cpp  medical_saver.cpp
src/preprocess/: level_shift.cpp
src/quant/: quantizer.cpp
src/transform/: dct2d.cpp
